<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="polonium.com.kotlinexample.settings.SettingsViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autofocus_setting_title"
            android:checked="@={viewModel.preferences.autofocus}"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flash_setting_title"
            android:checked="@={viewModel.preferences.showFlash}"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_setting_title"
            android:checked="@={viewModel.preferences.shouldShowText}"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rect_setting_title"
            android:checked="@={viewModel.preferences.showDrawRect}"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/touchAsCallback_setting_title"
            android:checked="@={viewModel.preferences.touchAsCallback}"/>
    </LinearLayout>
    </ScrollView>
</layout>