<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="polonium.com.kotlinexample.codeOverview.CodeOverviewViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/qr_bar_generating"
                    app:barcode="@{viewModel.barcode}" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/share_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="@{()->viewModel.shareCodeImage()}"
                    android:text="Поделиться"
                    app:cornerRadius="16dp"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="1dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{()->viewModel.saveOpenCodeImage()}"
                    android:text="Сохранить/Открыть"
                    app:cornerRadius="16dp"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="1dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typetitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.barcodeValueType.strId}" />

            <FrameLayout
                android:id="@+id/parsedContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rawTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:longClickable="true"
                android:text="@{viewModel.barcode.rawValue}"
                android:textIsSelectable="true" />

        </LinearLayout>
    </ScrollView>
</layout>
